# wesfarmers-case-study

./: .gitignore  README.md  pyproject.toml
data/: cust_acc.csv  products.csv  transactions.csv
iac/: main.tf
tests/: test_app.py
westfarmers_case_study/: app.py
